<resources>
    <string name="app_name">Lexi</string>
    <string name="prefs_file">com.example.lexiapp.PREFERENCES_FILE_KEY</string>
    <string name="logo">LEXI</string>
    <string name="name">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_email">Confirmar correo electrónico</string>
    <string name="confirm_sign_up">Registrarme</string>
    <string name="already_have_account">¿Ya tenés una cuenta?</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="Google">Continuar con Google</string>
    <string name="Facebook">Continuar con Facebook</string>
    <string name="mail">Correo Electrónico</string>
    <string name="login">Ingresar</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="need_account">¿Necesitas una cuenta?</string>
    <string name="register">Registrarme</string>
    <string name="games">Juegos</string>
    <string name="objectives">Objetivos</string>
    <string name="profile">Perfil</string>
    <string name="game_correct_word">Juego palabra correcta</string>
    <string name="game_lets_read">Juego vamos a leer</string>
    <string name="game_where_is_the_letter">Juego dónde está la letra</string>
    <string name="game_is_it_so_called">Juego así se dice</string>
    <string name="read_my_text">¡Leamos mi texto!</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="taken_photo_to_recognize_its_text">Foto capturada para extraer su texto</string>
    <string name="we_found_the_following">Encontramos lo siguiente:</string>
    <string name="scan_again">Escanear de nuevo</string>
    <string name="read_text">Leer</string>
    <string name="try_recapture">Intentá sacar otra foto</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="link_account">Vincularme</string>
    <string name="logout">Cerrar sesión</string>
    <string name="icon_username">Ícono del campo nombre de usuario</string>
    <string name="icon_user_email">Ícono del campo de correo electrónico del usuario</string>
    <string name="icon_user_birthday">Ícono de fecha de nacimiento del usuario</string>
    <string name="user_birthday">Fecha de nacimiento</string>
    <string name="my_objectives">Mis Objetivos Semanales</string>
    <string name="record_audio_again">Volver a grabar</string>
    <string name="audio_record_results">Chequear</string>
    <string name="your_recording">TU GRABACIÓN</string>
    <string name="pending_readings">MIS LECTURAS PENDIENTES</string>
    <string name="challenge_reading">LECTURA DESAFÍO</string>
    <string name="do_not_give_up">¡NO TE RINDAS!</string>
    <string name="loading_results">Cargando resultados…</string>
    <string name="phrase_negative_result">AUNQUE NO ESTÉ DEL TODO CORRECTO, \n ¡NO TE DESANIMES! ¡YA CASI LO LOGRAS!</string>
    <string name="next_text">SIGUIENTE TEXTO</string>
    <string name="try_again">VOLVER A\nINTENTAR</string>
    <string name="keep_playing">SEGUIR JUGANDO</string>
    <string name="words_to_exercise">VER PALABRAS A EJERCITAR</string>
    <string name="home">INICIO</string>
    <string name="phrase_positive_result">¡LO HICISTE MUY BIEN!</string>
    <string name="choose_what_scan">Elegí qué escanear</string>
    <string name="medical_registration">Matrícula</string>
    <string name="surname">Apellido</string>
    <string name="checking_your_account">Verificando tu cuenta. Este proceso de validación puede demorar hasta 48 horas</string>
    <string name="update">Actualizar</string>
    <string name="account_verified">Cuenta verificada con éxito, bienvenida/o a LEXI</string>
    <string name="continue_to_home">CONTINUAR</string>
    <string name="signup_professional">Registro Profesional</string>
    <string name="check_your_register">No pudimos verificar tus datos, por favor revisalos</string>
    <string name="check">Revisar</string>
    <string name="days_left">Días restantes: </string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="show_qr_to_professional">MOSTRÁ ESTE CÓDIGO QR A TU PROFESIONAL</string>
    <string name="choose_how_would_like_register">Elegí cómo querés registrarte</string>
    <string name="im_player">Soy jugador</string>
    <string name="im_professional">Soy profesional</string>
    <string name="dont_give_up_message">¡NO TE RINDAS!</string>
    <string name="next_word">SIGUIENTE PALABRA</string>
    <string name="home_screen">INICIO</string>
    <string name="your_answer">TU RESPUESTA</string>
    <string name="correct_option">OPCIÓN CORRECTA</string>
    <string name="change_word">Otra palabra</string>
    <string name="result">RESULTADO</string>
    <string name="you_did_it_very_well">¡LO HICISTE MUY BIEN!</string>
    <string name="fab_delete_patient">Eliminar paciente</string>
    <string name="average">%1$d %</string>
    <string name="choose_correct_option">ELIGE LA OPCIÓN CORRECTA</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="write_your_name">Escribe tu nombre</string>
    <string name="edit_your_profile">Editá tu perfil</string>
    <string name="WITL_title">¿DÓNDE ESTÁ LA LETRA?</string>
    <string name="CW_title">PALABRA CORRECTA</string>
    <string name="choose_three_favs">ELIGE TRES FAVORITOS</string>
    <string name="animals">Animales</string>
    <string name="insects">Insectos</string>
    <string name="fruits">Frutas</string>
    <string name="vegetables">Verduras</string>
    <string name="colors">Colores</string>
    <string name="names">Nombres</string>
    <string name="places">Lugares</string>
    <string name="countries">Países</string>
    <string name="vehicles">Vehículos</string>
    <string name="login_with_email_and_password">Inicia Sesión con tu email y contraseña</string>
    <string name="complete_with_your_data_for_register_in_lexi">Completá con tus datos para registrarte en LEXI</string>
    <string name="add_patient">Agregar</string>
    <string name="update_date">Última actualización:</string>
    <string name="progress_last_week">Progreso semanal</string>
    <string name="total_progress">Progreso histórico</string>
    <string name="last_week">Uso en la última semana</string>
    <string name="see_note">Ver notas</string>
    <string name="note">Agregar nota</string>
    <string name="notes">Notas sobre el jugador</string>
    <string name="message_length">Tené en cuenta que el máximo son 200 caracteres</string>
    <string name="write_note">Escribí tu nota aquí</string>
    <string name="save_note">Guardar nota</string>
    <string name="LR_title">VAMOS A LEER</string>
    <string name="dont_give_up_large_message">AUNQUE NO ESTÉ DEL TODO CORRECTO ¡ÁNIMO! ¡YA CASI LO LOGRAS!</string>
    <string name="listen_my_recording">ESCUCHAR MI GRABACIÓN</string>
    <string name="go_back">ATRÁS</string>
    <string name="completed_objective">Mis Objetivos Cumplidos</string>
    <string name="dont_objetives_complete">Todavía no tienes objetivos cumplidos de semanas anteriores</string>
    <string name="dont_have_progress">No tiene progresos esta última semana</string>
    <string name="not_use_seven_weeks">No se ha usado en las últimas 7 semanas</string>
    <string name="total_scans">Total histórico de escaneos: </string>
    <string name="validate_professional">Habilitar</string>
    <string name="show_more">Ver más</string>
    <string name="medical_registration_number">"Matrícula N°: "</string>
    <string name="metrics_source_clarification">Gráficos basados en la actividad del jugador</string>
    <string name="matricula">Matrícula: </string>
    <string name="not_linked_to_patients">Actualmente no está vinculada/o a ninguna otra cuenta de jugadores</string>
    <string name="not_notes_added">Aún no registras notas para este jugador</string>
    <string name="see_words_exercise">VER PALABRAS A EJERCITAR</string>
    <string name="create_note">Creá una nota</string>
    <plurals name="days_left">
        <item quantity="one">Día Restante: %d </item>
        <item quantity="other">Días Restantes: %d </item>
    </plurals>
</resources>