<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.games.letsread.ResultActivity">

    <ImageView
        android:id="@+id/ivMiniLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mini_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_give_up"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toBottomOf="@id/ivMiniLogo"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivCenterIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_arm_flex_outline"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvPhraseNegativeResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phrase_negative_result"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCenterIcon"/>

    <Button
        android:id="@+id/btnWordsToExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/words_to_exercise"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhraseNegativeResult"/>

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:gravity="center"
        android:drawableEnd="@drawable/ic_reload"
        android:backgroundTint="@color/bottom_navigation_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNextText"
        app:layout_constraintTop_toBottomOf="@id/btnWordsToExercise"/>

    <Button
        android:id="@+id/btnNextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_text"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:gravity="center"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:backgroundTint="@color/bottom_navigation_bg"
        app:layout_constraintStart_toEndOf="@+id/btnTryAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWordsToExercise"/>

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:icon="@drawable/ic_baseline_home_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNextText"/>

</androidx.constraintlayout.widget.ConstraintLayout>