<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="8dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/purple"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/amoeba" />

        <TextView
            android:id="@+id/tvLogoApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            app:layout_constraintStart_toStartOf="@id/animationLogo"
            app:layout_constraintEnd_toEndOf="@id/animationLogo"
            app:layout_constraintTop_toTopOf="@id/animationLogo"
            app:layout_constraintBottom_toBottomOf="@id/animationLogo"
            android:textAppearance="@style/title"
            android:textColor="@color/white"
            tools:textColor="@color/black"
            android:textSize="40sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_email_and_password"
        android:textAppearance="@style/subtitle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_mail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/blue"
        app:hintTextAppearance="@style/signUpText"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/blue"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="@style/signUpText"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:linksClickable="true"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textAppearance="@style/subtitle"
        android:textColor="@color/blue"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/blue"
        android:linksClickable="true"
        android:text="@string/login"
        android:textAlignment="center"
        app:cornerRadius="10dp"
        android:textAppearance="@style/textMaterialButton"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_need_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_register"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/subtitle"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/tv_need_account"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/subtitle"
            android:textStyle="bold"
            android:textColor="@color/blue"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
